[gd_scene load_steps=17 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Player/idle.png" type="Texture" id=2]
[ext_resource path="res://Player/jump2.png" type="Texture" id=3]
[ext_resource path="res://Player/jump0.png" type="Texture" id=4]
[ext_resource path="res://Player/jump1.png" type="Texture" id=5]
[ext_resource path="res://Player/jump3.png" type="Texture" id=6]
[ext_resource path="res://Player/run0.png" type="Texture" id=7]
[ext_resource path="res://Player/run1.png" type="Texture" id=8]
[ext_resource path="res://Player/run2.png" type="Texture" id=9]
[ext_resource path="res://Player/run3.png" type="Texture" id=10]
[ext_resource path="res://Player/run4.png" type="Texture" id=11]
[ext_resource path="res://Player/jump4.png" type="Texture" id=12]
[ext_resource path="res://icon.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "land",
"speed": 6.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 12 ) ],
"loop": false,
"name": "startJump",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 64 )

[node name="World" type="Node2D"]
self_modulate = Color( 0.490196, 0.137255, 0.137255, 1 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 64, 0 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( -80.812, -91.1249 )
current = true
zoom = Vector2( 2, 2 )

[node name="Sprite" type="AnimatedSprite" parent="player"]
frames = SubResource( 1 )
animation = "run"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
modulate = Color( 0.454902, 0.176471, 0.176471, 1 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="FloorRays" type="Node2D" parent="player"]

[node name="RayCast2D" type="RayCast2D" parent="player/FloorRays"]
position = Vector2( -40, 80 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="RayCast2D2" type="RayCast2D" parent="player/FloorRays"]
position = Vector2( 0, 80 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="RayCast2D3" type="RayCast2D" parent="player/FloorRays"]
position = Vector2( 40, 80 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="LandRays" type="Node2D" parent="player"]

[node name="RayCast2D" type="RayCast2D" parent="player/LandRays"]
position = Vector2( 0, 80 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 75 )

[node name="WallRays" type="Node2D" parent="player"]

[node name="LeftWall" type="RayCast2D" parent="player/WallRays"]
position = Vector2( -82.2294, 0 )
enabled = true
exclude_parent = false
cast_to = Vector2( -10, 0 )

[node name="RightWall" type="RayCast2D" parent="player/WallRays"]
position = Vector2( 44.0256, 0.407639 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="WallJumpTimer" type="Timer" parent="player"]
process_mode = 0
wait_time = 0.11
one_shot = true

[node name="Walls" type="Node" parent="."]
editor/display_folded = true

[node name="Wall" type="StaticBody2D" parent="Walls"]
position = Vector2( 64, 256 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall"]
shape = SubResource( 3 )

[node name="Wall35" type="StaticBody2D" parent="Walls"]
position = Vector2( -64, 256 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall35"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall35"]
shape = SubResource( 3 )

[node name="Wall36" type="StaticBody2D" parent="Walls"]
position = Vector2( -192, 256 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall36"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall36"]
shape = SubResource( 3 )

[node name="Wall37" type="StaticBody2D" parent="Walls"]
position = Vector2( -192, 128 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall37"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall37"]
shape = SubResource( 3 )

[node name="Wall38" type="StaticBody2D" parent="Walls"]
position = Vector2( -192, 4.87512 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall38"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall38"]
shape = SubResource( 3 )

[node name="Wall39" type="StaticBody2D" parent="Walls"]
position = Vector2( -192.596, -121 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall39"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall39"]
shape = SubResource( 3 )

[node name="Wall40" type="StaticBody2D" parent="Walls"]
position = Vector2( 205.75, -152.855 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall40"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall40"]
shape = SubResource( 3 )

[node name="Wall41" type="StaticBody2D" parent="Walls"]
position = Vector2( 205.996, -25.5159 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall41"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall41"]
shape = SubResource( 3 )

[node name="Wall2" type="StaticBody2D" parent="Walls"]
position = Vector2( 192, 256 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall2"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall2"]
shape = SubResource( 3 )

[node name="Wall3" type="StaticBody2D" parent="Walls"]
position = Vector2( 320, 256 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall3"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall3"]
shape = SubResource( 3 )

[node name="Wall4" type="StaticBody2D" parent="Walls"]
position = Vector2( 448, 320 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall4"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall4"]
shape = SubResource( 3 )

[node name="Wall5" type="StaticBody2D" parent="Walls"]
position = Vector2( 576, 384 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall5"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall5"]
shape = SubResource( 3 )

[node name="Wall6" type="StaticBody2D" parent="Walls"]
position = Vector2( 704, 448 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall6"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall6"]
shape = SubResource( 3 )

[node name="Wall7" type="StaticBody2D" parent="Walls"]
position = Vector2( 832, 448 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall7"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall7"]
shape = SubResource( 3 )

[node name="Wall8" type="StaticBody2D" parent="Walls"]
position = Vector2( 960, 448 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall8"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall8"]
shape = SubResource( 3 )

[node name="Wall9" type="StaticBody2D" parent="Walls"]
position = Vector2( 1088, 448 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall9"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall9"]
shape = SubResource( 3 )

[node name="Wall10" type="StaticBody2D" parent="Walls"]
position = Vector2( 1216, 448 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall10"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall10"]
shape = SubResource( 3 )

[node name="Wall11" type="StaticBody2D" parent="Walls"]
position = Vector2( 1344, 416 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall11"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall11"]
shape = SubResource( 3 )

[node name="Wall12" type="StaticBody2D" parent="Walls"]
position = Vector2( 1472, 352 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall12"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall12"]
shape = SubResource( 3 )

[node name="Wall13" type="StaticBody2D" parent="Walls"]
position = Vector2( 1600, 288 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall13"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall13"]
shape = SubResource( 3 )

[node name="Wall14" type="StaticBody2D" parent="Walls"]
position = Vector2( 1728, 288 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall14"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall14"]
shape = SubResource( 3 )

[node name="Wall15" type="StaticBody2D" parent="Walls"]
position = Vector2( 1856, 288 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall15"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall15"]
shape = SubResource( 3 )

[node name="Wall16" type="StaticBody2D" parent="Walls"]
position = Vector2( 2176, 288 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall16"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall16"]
shape = SubResource( 3 )

[node name="Wall17" type="StaticBody2D" parent="Walls"]
position = Vector2( 2304, 288 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall17"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall17"]
shape = SubResource( 3 )

[node name="Wall18" type="StaticBody2D" parent="Walls"]
position = Vector2( 2432, 288 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall18"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall18"]
shape = SubResource( 3 )

[node name="Wall19" type="StaticBody2D" parent="Walls"]
position = Vector2( 2560, 416 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall19"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall19"]
shape = SubResource( 3 )

[node name="Wall20" type="StaticBody2D" parent="Walls"]
position = Vector2( 2560, 544 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall20"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall20"]
shape = SubResource( 3 )

[node name="Wall21" type="StaticBody2D" parent="Walls"]
position = Vector2( 2560, 672 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall21"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall21"]
shape = SubResource( 3 )

[node name="Wall22" type="StaticBody2D" parent="Walls"]
position = Vector2( 2560, 800 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall22"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall22"]
shape = SubResource( 3 )

[node name="Wall23" type="StaticBody2D" parent="Walls"]
position = Vector2( 2688, 800 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall23"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall23"]
shape = SubResource( 3 )

[node name="Wall24" type="StaticBody2D" parent="Walls"]
position = Vector2( 2816, 800 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall24"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall24"]
shape = SubResource( 3 )

[node name="Wall25" type="StaticBody2D" parent="Walls"]
position = Vector2( 2944, 800 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall25"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall25"]
shape = SubResource( 3 )

[node name="Wall26" type="StaticBody2D" parent="Walls"]
position = Vector2( 3072, 800 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall26"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall26"]
shape = SubResource( 3 )

[node name="Wall27" type="StaticBody2D" parent="Walls"]
position = Vector2( 2880, 608 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall27"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall27"]
shape = SubResource( 3 )

[node name="Wall33" type="StaticBody2D" parent="Walls"]
position = Vector2( 3104, 448 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall33"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall33"]
shape = SubResource( 3 )

[node name="Wall34" type="StaticBody2D" parent="Walls"]
position = Vector2( 2976, 544 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall34"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall34"]
shape = SubResource( 3 )

[node name="Wall28" type="StaticBody2D" parent="Walls"]
position = Vector2( 1920, 704 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall28"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall28"]
shape = SubResource( 3 )

[node name="Wall29" type="StaticBody2D" parent="Walls"]
position = Vector2( 2048, 704 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall29"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall29"]
shape = SubResource( 3 )

[node name="Wall30" type="StaticBody2D" parent="Walls"]
position = Vector2( 2176, 704 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall30"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall30"]
shape = SubResource( 3 )

[node name="Wall31" type="StaticBody2D" parent="Walls"]
position = Vector2( 1824, 576 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall31"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall31"]
shape = SubResource( 3 )

[node name="Wall32" type="StaticBody2D" parent="Walls"]
position = Vector2( 1824, 448 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall32"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall32"]
shape = SubResource( 3 )
[connection signal="timeout" from="player/WallJumpTimer" to="player" method="_on_WallJumpTimer_timeout"]
